--- a/demo03-optimization.ipynb
+++ b/demo03-optimization.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "k7fTlltiRdBw"
       },
@@ -43,23 +43,23 @@
         "        self.c = c\n",
         "        self.d = d\n",
         "        self.e = e\n",
-        "    \n",
+        "\n",
         "    def getParams(self,x,y):\n",
         "        if y is None:\n",
         "            y = x[1]\n",
-        "            x = x[0]       \n",
+        "            x = x[0]\n",
         "        return x, y\n",
-        "    \n",
+        "\n",
         "    def __call__(self,x,y=None):\n",
         "        x,y = self.getParams(x,y)\n",
         "        return 0.5*(self.a*x**2 + self.b*y**2 + 2*self.c*x*y) + self.d*x + self.e*y\n",
-        "    \n",
+        "\n",
         "    def grad(self,x,y=None):\n",
         "    # d f(x,y)/ dx = a x + c y + d\n",
         "    # d (fx,y)/ dy = b y + c x + e\n",
         "        x,y = self.getParams(x,y)\n",
         "        return torch.tensor([self.a*x+self.c*y+self.d,self.b*y+self.c*x+self.e])\n",
-        "    \n",
+        "\n",
         "    def hess(self,x,y=None):\n",
         "    # d^2 f(x,y)/ dx^2 = a\n",
         "    # d^2 f(x,y)/ dy^2 = b\n",
@@ -69,76 +69,76 @@
         "\n",
         "class GradientDescent:\n",
         "    # Algorithm from here: https://arxiv.org/abs/1412.6980\n",
-        "    \n",
+        "\n",
         "    def __init__(self,lr=1,b1=0.9,b2=0.999):\n",
         "        self.lr = lr # learning rate\n",
         "        self.b1 = b1 # grad aggregation param\n",
         "        self.b2 = b2 # grad^2 aggregation param\n",
-        "        \n",
+        "\n",
         "        self.v = 0 # grad aggregation\n",
         "        self.w = 0 # grad^2 aggregation\n",
         "        self.t = 0\n",
-        "            \n",
+        "\n",
         "        self.eps = 1.0e-9\n",
-        "        \n",
+        "\n",
         "    def __call__(self,grad,hess):\n",
-        "        \n",
+        "\n",
         "        self.t += 1\n",
-        "        \n",
+        "\n",
         "        # aggregation\n",
         "        self.v = self.b1*(self.v) + (1-self.b1)*grad\n",
         "        self.w = self.b2*(self.w) + (1-self.b2)*grad**2\n",
-        "        \n",
+        "\n",
         "        # bias correction\n",
         "        vcorr = self.v/(1-self.b1**self.t)\n",
         "        wcorr = self.w/(1-self.b2**self.t) if self.b2 != 0 else 1\n",
-        "        \n",
+        "\n",
         "        return -self.lr*vcorr/( wcorr**0.5 + self.eps )\n",
-        "        \n",
-        "    \n",
+        "\n",
+        "\n",
         "class Newtons:\n",
         "    # https://en.wikipedia.org/wiki/Newton%27s_method_in_optimization\n",
         "    def __init__(self,lr=1):\n",
         "        self.lr = lr\n",
-        "    \n",
+        "\n",
         "    def __call__(self,grad,hess):\n",
         "        return -self.lr*torch.matmul(torch.inverse(hess),grad)\n",
-        "            \n",
+        "\n",
         "def runOptim(init,optim,func,steps):\n",
-        "    \n",
+        "\n",
         "    curpos = init # current position\n",
         "    path = [curpos]\n",
         "\n",
-        "    \n",
-        "    for _ in range(steps):        \n",
+        "\n",
+        "    for _ in range(steps):\n",
         "\n",
         "        grad = func.grad(curpos)\n",
         "        hess = func.hess(curpos)\n",
-        "            \n",
+        "\n",
         "        dx = optim(grad,hess)\n",
         "        curpos = curpos + dx\n",
         "        path.append(curpos)\n",
-        "    \n",
+        "\n",
         "    return path\n",
         "\n",
-        "def showPath(func,init,paths,labels,colors):\n",
+        "def showPath(func,init,paths,labels,colors, levels):\n",
         "\n",
         "    x = torch.arange(-10,10,0.05)\n",
         "    y = torch.arange(-10,10,0.05)\n",
-        "    \n",
+        "\n",
         "    # create meshgrid\n",
         "    xx, yy = torch.meshgrid(x,y)\n",
         "    zz = func(xx,yy)\n",
-        "    \n",
+        "\n",
         "    # create contour\n",
         "    fig, ax = plt.subplots(1,1,figsize=(16,10))\n",
         "    cp = ax.contourf(xx,yy,zz,cmap=cm.gray)\n",
         "    fig.colorbar(cp)\n",
-        "    \n",
+        "\n",
         "    # mark initial point\n",
         "    ax.plot(init[0],init[1],'ro')\n",
         "    ax.text(init[0]+0.5,init[1]+0.5,'Intial Point',color='white')\n",
-        "    \n",
+        "\n",
         "    # Plot paths\n",
         "    for pnum in range(len(paths)):\n",
         "        for i in range(len(paths[pnum])-1):\n",
@@ -146,12 +146,12 @@
         "            d = paths[pnum][i+1] - curpos\n",
         "            ax.arrow(curpos[0],curpos[1],d[0],d[1],color=colors[pnum],head_width=0.2)\n",
         "            ax.text(curpos[0]+d[0],curpos[1]+d[1],str(i),color='white')\n",
-        "    \n",
+        "\n",
         "    # Add legend\n",
         "    legends = []\n",
         "    for col in colors:\n",
         "        legends.append(mpatches.Patch(color=col))\n",
-        "    ax.legend(legends,labels) "
+        "    ax.legend(legends,labels)"
       ]
     },
     {
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -229,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -267,13 +267,13 @@
         "id": "dWyHCMNRV_p2"
       },
       "source": [
-        "In fact, there is a more insiduous issue with gradient descent. Let's go back to the convex case (where everything is supposed to work). Choose a parabolic function where the level set contours are skewed ellipses: $$f(x,y) = x^2 + y^2 - 0.8 xy + x + y.$$ \n",
+        "In fact, there is a more insiduous issue with gradient descent. Let's go back to the convex case (where everything is supposed to work). Choose a parabolic function where the level set contours are skewed ellipses: $$f(x,y) = x^2 + y^2 - 0.8 xy + x + y.$$\n",
         "In such cases, gradient descent (which just follows the locally steepest direction) tends to oscillate quite a bit."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -458,12 +458,12 @@
         "\n",
         "As we can see, momentum speeds up gradient descent but there's still the issue of tuning the learning rate property.\n",
         "\n",
-        "ADAM takes care of this by automatically tuning the learning rate (\"adaptive scheduling\"). "
+        "ADAM takes care of this by automatically tuning the learning rate (\"adaptive scheduling\")."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -507,9 +507,9 @@
         "id": "fihtOD2kiO6C"
       },
       "source": [
-        "That's it! Feel free to play around with various parameters -- different optimizers, different learning rates, damping factors, etc. \n",
+        "That's it! Feel free to play around with various parameters -- different optimizers, different learning rates, damping factors, etc.\n",
         "\n",
-        "Onto the big question: which optimizer should be used? \n",
+        "Onto the big question: which optimizer should be used?\n",
         "\n",
         "Unfortunately there is no clear answer. The choice of \"best\" optimizer seems to be model-dependent. A general couple of thumb rules:\n",
         "* For vision applications involving ResNets, SGD + momentum seems to be sufficient.\n",
